--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,7 @@
     <title>Voos Mais Baratos</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <style>
-        #flight-results {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); 
-            gap: 16px; 
-        }
-
-        @media (max-width: 768px) {
-            #flight-results {
-                grid-template-columns: repeat(2, 1fr); 
-            }
-        }
-
-        @media (max-width: 480px) {
-            #flight-results {
-                grid-template-columns: 1fr; 
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style/home.css">
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
@@ -45,7 +27,7 @@
         <div id="flight-results" class="mt-4"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script>
         flatpickr("#departure-date", {
             dateFormat: "Y-m-d", 
