--- a/src/register.html
+++ b/src/register.html
@@ -1,57 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script type="module">
-        // Importando o Firebase
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js';
-        import { getAuth, createUserWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js';
-
-        // Configuração do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyCi9URQIfKDzs1CoCaUqRzZoHJ7A0OOxfA",
-            authDomain: "travel-site-a23ca.firebaseapp.com",
-            projectId: "travel-site-a23ca",
-            storageBucket: "travel-site-a23ca.appspot.com",
-            messagingSenderId: "766683940274",
-            appId: "1:766683940274:web:5ac80a91bde4870d4490ab",
-            measurementId: "G-2WJRMR14W0",
-        };
-
-        // Inicializando o Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-
-        // Cadastro
-        document.getElementById("register-form").addEventListener("submit", function (event) {
-            event.preventDefault();
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    alert("Cadastro bem-sucedido!");
-                    window.location.href = "login.html";
-                })
-                .catch((error) => {
-                    const errorMessage = error.message;
-                    alert("Erro: " + errorMessage);
-                });
-        });
-    </script>
-    <title>Cadastro</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script type="module" src="js/register.js"></script>
+  <title>Cadastro</title>
 </head>
 <body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold text-center mb-4">Cadastro</h1>
-        <form id="register-form" class="bg-white p-4 rounded-lg shadow-md">
-            <input type="email" id="email" placeholder="Email" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-            <input type="password" id="password" placeholder="Senha" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-            <button type="submit" class="bg-green-500 text-white p-2 rounded w-full">Cadastrar</button>
-            <p class="mt-4 text-center">Já tem uma conta? <a href="login.html" class="text-blue-500">Faça login</a></p>
-        </form>
-    </div>
+  <div class="container mx-auto p-4">
+    <h1 class="text-3xl font-bold text-center mb-4">Cadastro</h1>
+    <form id="register-form" class="bg-white p-4 rounded-lg shadow-md">
+      <input type="email" id="email" placeholder="Email" class="p-2 border border-gray-300 rounded w-full mb-4" required>
+      <input type="password" id="password" placeholder="Senha" class="p-2 border border-gray-300 rounded w-full mb-4" required>
+      <button type="submit" class="bg-green-500 text-white p-2 rounded w-full">Cadastrar</button>
+      <p class="mt-4 text-center">Já tem uma conta? <a href="login.html" class="text-blue-500">Faça login</a></p>
+    </form>
+  </div>
 </body>
 </html>
