--- a/src/login.html
+++ b/src/login.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script type="module" src="js/login.js"></script>
   <title>Login</title>
+  <link rel="stylesheet" href="style/login.css">
 </head>
-<body class="bg-gray-100">
-  <div class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold text-center mb-4">Login</h1>
-    <form id="login-form" class="bg-white p-4 rounded-lg shadow-md">
-      <input type="email" id="email" placeholder="Email" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-      <input type="password" id="password" placeholder="Senha" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-      <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full">Login</button>
-      <p class="mt-4 text-center">Não tem uma conta? <a href="register.html" class="text-blue-500">Cadastre-se</a></p>
+<body>
+  <div id="notification" class="notification"></div> <!-- Div para a notificação -->
+  <div class="container">
+    <h1>Bem vindo à Rota Express!</h1>
+    <h2> Entre para facilitar sua busca por viagens promocionais.</h2>
+    <form id="login-form">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Senha" required>
+      <button type="submit">Login</button>
+      <p>Não tem uma conta? <a href="register.html">Cadastre-se</a></p>
     </form>
   </div>
 </body>
