--- a/src/register.html
+++ b/src/register.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script type="module" src="js/register.js"></script>
   <title>Cadastro</title>
+  <link rel="stylesheet" href="style/register.css">
 </head>
-<body class="bg-gray-100">
-  <div class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold text-center mb-4">Cadastro</h1>
-    <form id="register-form" class="bg-white p-4 rounded-lg shadow-md">
-      <input type="email" id="email" placeholder="Email" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-      <input type="password" id="password" placeholder="Senha" class="p-2 border border-gray-300 rounded w-full mb-4" required>
-      <button type="submit" class="bg-green-500 text-white p-2 rounded w-full">Cadastrar</button>
-      <p class="mt-4 text-center">Já tem uma conta? <a href="login.html" class="text-blue-500">Faça login</a></p>
+<body>
+  <div class="container">
+    <h1>Cadastro</h1>
+    <form id="register-form">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Senha" required>
+      <button type="submit">Cadastrar</button>
+      <p>Já tem uma conta? <a href="login.html">Faça login</a></p>
     </form>
   </div>
 </body>
