--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style/login.css">
 </head>
 <body>
-  <div id="notification" class="notification"></div> <!-- Div para a notificação -->
+  <div id="notification" class="notification"></div> 
   <div class="container">
     <h1>Bem vindo à Rota Express!</h1>
     <h2> Entre para facilitar sua busca por viagens promocionais.</h2>
