--- a/src/site.html
+++ b/src/site.html
@@ -67,22 +67,17 @@
       <h2>Notícias de Aviação</h2>
       <div class="carousel">
         <div class="carousel-item">
-          <img src="static/img/news1.jpg" alt="Notícia 1" />
-          <p>Avião faz pouso de emergência em São Paulo</p>
         </div>
         <div class="carousel-item">
-          <img src="static/img/news2.jpg" alt="Notícia 2" />
-          <p>Novas rotas internacionais serão inauguradas este ano</p>
         </div>
         <div class="carousel-item">
-          <img src="static/img/news3.jpg" alt="Notícia 3" />
-          <p>Companhias aéreas oferecem descontos para viagens em 2024</p>
         </div>
       </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="js/api/notices.js"></script>
     <script src="js/display_card.js"></script>
   </body>
