--- a/src/index.html
+++ b/src/index.html
@@ -1,51 +1,87 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <title>Voos Mais Baratos</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <link rel="stylesheet" href="style/home.css">
-</head>
-<body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold text-center mb-4">Buscador de Voos Mais Baratos</h1>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rota Express</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/card.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#viagens">Viagens</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#informacoes">Informações</a></li>
+          <li><a href="search.html">Buscar Voos</a></li>
+          <li class="login"><a href="login.html">Login</a></li>
+        </ul>
         
-        <div class="bg-white p-4 rounded-lg shadow-md">
-            <form id="flight-search-form" class="flex flex-col md:flex-row md:space-x-4 mb-4">
-                <div class="relative">
-                    <input type="text" id="search1" placeholder="Pesquise aeroporto de embarque..." class="p-2 border border-gray-300 rounded w-full" required>
-                    <div id="suggestions1" class="suggestions absolute bg-white border border-gray-300 rounded mt-1 w-full"></div>
-                </div>
-                <div class="relative">
-                    <input type="text" id="search2" placeholder="Pesquise aeroporto de destino..." class="p-2 border border-gray-300 rounded w-full" required>
-                    <div id="suggestions2" class="suggestions absolute bg-white border border-gray-300 rounded mt-1 w-full"></div>
-                </div>
-                <input type="text" id="departure-date" class="p-2 border border-gray-300 rounded" placeholder="Data de Partida" required>
-                <input type="number" id="adults" placeholder="Número de Adultos" class="p-2 border border-gray-300 rounded" required min="1" value="1">
-                <button type="submit" class="bg-blue-500 text-white p-2 rounded">Buscar Voos</button>
-            </form>
+      </nav>
+      <div class="logo" id="home">
+        <h1>Rota Express</h1>
+        <img src="img/logotipo.png" alt="Logo Rota Express" width="200px" />
+      </div>
+      <p>
+        Rota Express: Fácil, rápido e dinâmico. Confira agora as viagens mais
+        baratas do mercado!
+      </p>
+    </header>
+
+    <section class="card-section" id="viagens">
+      <div class="flight-carousel"></div>
+    </section>
+
+    <section class="principles-section" id="sobre">
+      <h2>Nossos Princípios</h2>
+      <div class="principles-container">
+        <div class="principle">
+          <img src="img/money_icon.png" alt="Ícone 1" width="80px" />
+          <h3>Viagens Baratas</h3>
+          <p>
+            Ajudamos você a encontrar as viagens mais econômicas do mercado.
+          </p>
         </div>
-
-        <div id="loading" class="hidden text-center mt-4">
-            <div class="loader"></div>
-            <p class="text-lg font-semibold">Estamos apurando nossas passagens...</p>
+        <div class="principle">
+          <img src="img/time_icon.png" alt="Ícone 2" width="80px" />
+          <h3>Poupar Tempo</h3>
+          <p>
+            Nosso objetivo é agilizar o processo de busca para poupar seu tempo.
+          </p>
         </div>
+        <div class="principle">
+          <img src="img/search_icon.png" alt="Ícone 3" width="80px" />
+          <h3>Diferencial no Mercado</h3>
+          <p>
+            Temos a melhor tecnologia para facilitar a busca das melhores
+            opções.
+          </p>
+        </div>
+      </div>
+    </section>
 
-        <div id="flight-results" class="mt-4"></div>
-        
-    </div>  
+    <section class="info-section" id="informacoes">
+      <h2>Notícias de Aviação</h2>
+      <div class="carousel">
+        <div class="carousel-item">
+        </div>
+        <div class="carousel-item">
+        </div>
+        <div class="carousel-item">
+        </div>
+      </div>
+    </section>
 
-    <script type="module" src="js/main.js"></script>
-    <script src="js/suggestion.js"></script>
-    <script>
-        flatpickr("#departure-date", {
-            dateFormat: "Y-m-d", 
-            minDate: "today" 
-        });
-    </script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="js/api/notices.js"></script>
+    <script src="js/display_card.js"></script>
+  </body>
 </html>
