--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
   <body>
     <header>
       <nav class="navbar">
-        <ul>
+        <div class="menu-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#viagens">Viagens</a></li>
           <li><a href="#sobre">Sobre</a></li>
@@ -22,8 +27,8 @@
           <li><a href="search.html">Buscar Voos</a></li>
           <li class="login"><a href="login.html">Login</a></li>
         </ul>
-        
       </nav>
+      
       <div class="logo" id="home">
         <h1>Rota Express</h1>
         <img src="img/logotipo.png" alt="Logo Rota Express" width="200px" />
@@ -83,5 +88,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="js/api/notices.js"></script>
     <script src="js/display_card.js"></script>
+    <script src="js/menu.js"></script>
   </body>
 </html>
