footter e navbar do search

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Rota Express</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/card.css" />
+    <link rel="stylesheet" href="style/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
@@ -25,7 +26,6 @@
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#informacoes">Informações</a></li>
           <li><a href="search.html">Buscar Voos</a></li>
-          <li class="login"><a href="login.html">Login</a></li>
         </ul>
       </nav>
       
@@ -79,6 +79,25 @@
       </div>
     </section>
 
+    <footer>
+      <div class="footer-container">
+        <div class="footer-left">
+          <h4>Rota Express</h4>
+          <p>Fácil, rápido e dinâmico.</p>
+          <p>&copy; 2024 Rota Express. Todos os direitos reservados.</p>
+        </div>
+        <div class="footer-right">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#viagens">Viagens</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#informacoes">Informações</a></li>
+            <li><a href="search.html">Buscar Voos</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
