--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
     </header>
 
     <section class="card-section" id="viagens">
-      <div class="flight-carousel"></div>
-    </section>
+      <div class="flight-list"></div>
+    </section>    
 
     <section class="principles-section" id="sobre">
       <h2>Nossos Princípios</h2>
