nome dos estados

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/card.css" />
     <link rel="stylesheet" href="style/footer.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
   </head>
   <body>
     <header>
@@ -49,24 +46,17 @@
         <div class="principle">
           <img src="img/money_icon.png" alt="Ícone 1" width="80px" />
           <h3>Viagens Baratas</h3>
-          <p>
-            Ajudamos você a encontrar as viagens mais econômicas do mercado.
-          </p>
+          <p>Ajudamos você a encontrar as viagens mais econômicas do mercado.</p>
         </div>
         <div class="principle">
           <img src="img/time_icon.png" alt="Ícone 2" width="80px" />
           <h3>Poupar Tempo</h3>
-          <p>
-            Nosso objetivo é agilizar o processo de busca para poupar seu tempo.
-          </p>
+          <p>Nosso objetivo é agilizar o processo de busca para poupar seu tempo.</p>
         </div>
         <div class="principle">
           <img src="img/search_icon.png" alt="Ícone 3" width="80px" />
           <h3>Diferencial no Mercado</h3>
-          <p>
-            Temos a melhor tecnologia para facilitar a busca das melhores
-            opções.
-          </p>
+          <p>Temos a melhor tecnologia para facilitar a busca das melhores opções.</p>
         </div>
       </div>
     </section>
@@ -74,8 +64,7 @@
     <section class="info-section" id="informacoes">
       <h2>Notícias de Aviação</h2>
       <div class="carousel">
-        <div class="carousel-item">
-        </div>
+        <div class="carousel-item"></div>
       </div>
     </section>
 
