--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/card.css" />
     <link rel="stylesheet" href="style/footer.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+    />
   </head>
   <body>
     <header>
@@ -25,7 +28,7 @@
           <li><a href="search.html">Buscar Voos</a></li>
         </ul>
       </nav>
-      
+
       <div class="logo" id="home">
         <h1>Rota Express</h1>
         <img src="img/logotipo.png" alt="Logo Rota Express" width="200px" />
@@ -36,9 +39,10 @@
       </p>
     </header>
 
+    <div class="card-section"></div>
     <section class="card-section" id="viagens">
       <div class="flight-list"></div>
-    </section>    
+    </section>
 
     <section class="principles-section" id="sobre">
       <h2>Nossos Princípios</h2>
@@ -46,17 +50,24 @@
         <div class="principle">
           <img src="img/money_icon.png" alt="Ícone 1" width="80px" />
           <h3>Viagens Baratas</h3>
-          <p>Ajudamos você a encontrar as viagens mais econômicas do mercado.</p>
+          <p>
+            Ajudamos você a encontrar as viagens mais econômicas do mercado.
+          </p>
         </div>
         <div class="principle">
           <img src="img/time_icon.png" alt="Ícone 2" width="80px" />
           <h3>Poupar Tempo</h3>
-          <p>Nosso objetivo é agilizar o processo de busca para poupar seu tempo.</p>
+          <p>
+            Nosso objetivo é agilizar o processo de busca para poupar seu tempo.
+          </p>
         </div>
         <div class="principle">
           <img src="img/search_icon.png" alt="Ícone 3" width="80px" />
           <h3>Diferencial no Mercado</h3>
-          <p>Temos a melhor tecnologia para facilitar a busca das melhores opções.</p>
+          <p>
+            Temos a melhor tecnologia para facilitar a busca das melhores
+            opções.
+          </p>
         </div>
       </div>
     </section>
@@ -86,7 +97,7 @@
         </div>
       </div>
     </footer>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
