--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rota Express</title>
-    <link rel="stylesheet" href="/Travel-Site/src/style/style.css" />
-    <link rel="stylesheet" href="/Travel-Site/src/style/footer.css" />
+    <link rel="stylesheet" href="Travel-Site\src\style\style.css" />
+    <link rel="stylesheet" href="Travel-Site\src\style\footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
