--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body.loaded .loader {
         baratas do mercado!
       </p>
 
-      <a href="/Travel-Site/src/home.html" class="cta-button">Reserve Sua Viagem Agora!</a>
+      <a href="Travel-Site\src\home.html" class="cta-button">Reserve Sua Viagem Agora!</a>
     </header>
     
 
