--- a/src/home.html
+++ b/src/home.html
@@ -5,26 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rota Express</title>
-  <link rel="stylesheet" href="style/style.css" />
   <link rel="stylesheet" href="style/card.css" />
   <link rel="stylesheet" href="style/footer.css" />
   <link rel="stylesheet" href="style/modal.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
   <style>
-    /* Estilos gerais */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
-      /* Cor de fundo geral */
       color: #333;
-      /* Cor do texto padrão */
       line-height: 1.6;
-      /* Melhor legibilidade */
     }
 
-    /* Loader Styles */
     .loader {
       position: fixed;
       z-index: 999;
@@ -33,9 +27,7 @@
       width: 100%;
       height: 100%;
       background-color: #ffcc00;
-      /* Amarelo */
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       color: #fff;
@@ -73,7 +65,6 @@
       display: none;
     }
 
-    /* Estilos da Navbar */
     .navbar {
       display: flex;
       justify-content: space-between;
@@ -85,10 +76,8 @@
 
     .menu-toggle {
       display: none;
-      /* Oculta para desktop, pode ser ativado para mobile */
       cursor: pointer;
       font-size: 24px;
-      /* Aumenta o tamanho do ícone do menu */
       color: #f9f9f9;
     }
 
@@ -121,7 +110,6 @@
 
     .button-container {
       margin-left: auto;
-      /* Move o botão para a direita */
     }
 
     #searchButton {
@@ -139,10 +127,8 @@
       background-color: #e6b800;
     }
 
-    /* Estilos do Modal */
     .modal {
       display: none;
-      /* Inicialmente escondido */
       position: fixed;
       z-index: 1000;
       left: 0;
@@ -159,8 +145,8 @@
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-      width: 400px;
-      /* Largura do modal */
+      width: 90%;
+      max-width: 400px;
     }
 
     .close-button {
@@ -176,10 +162,8 @@
       border: 1px solid #ccc;
       border-radius: 5px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-      /* Sombra para o campo de entrada */
     }
 
-    /* Estilos do botão de pesquisa */
     #searchSubmit {
       background-color: #ffcc00;
       color: #272A33;
@@ -195,7 +179,6 @@
       background-color: #e6b800;
     }
 
-    /* Estilos da Seção de Cartões */
     .card-section {
       padding: 20px;
       background-color: #fff;
@@ -218,7 +201,6 @@
       transform: translateY(-5px);
     }
 
-    /* Estilos do Rodapé */
     footer {
       background-color: #272A33;
       color: #fff;
@@ -235,10 +217,12 @@
 
     .footer-left {
       flex: 1;
+      margin: 10px;
     }
 
     .footer-right {
       flex: 1;
+      margin: 10px;
     }
 
     .footer-right ul {
@@ -260,41 +244,46 @@
       text-decoration: underline;
     }
 
-    /* Media Queries para Responsividade */
     @media (max-width: 768px) {
       .menu-toggle {
         display: block;
-        /* Exibe o menu hamburger em telas pequenas */
       }
 
       .nav-links {
         display: none;
-        /* Esconde os links da navbar */
         flex-direction: column;
-        /* Muda para coluna */
         position: absolute;
         top: 60px;
-        /* Para evitar sobreposição */
         left: 0;
         width: 100%;
         background-color: #272A33;
-        /* Cor de fundo do menu */
         padding: 10px 0;
       }
 
       .nav-links.active {
         display: flex;
-        /* Exibe os links quando o menu está ativo */
       }
 
       .nav-links li {
         margin: 10px 0;
-        /* Margem vertical entre os links */
       }
 
       #searchInput {
         margin: 10px 0;
-        /* Margem para separar do botão */
+      }
+
+      .card {
+        width: 100%;
+      }
+
+      .footer-container {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .footer-left,
+      .footer-right {
+        margin-bottom: 10px;
       }
     }
   </style>
@@ -307,7 +296,6 @@
   </div>
 
   <section>
-
     <nav class="navbar">
       <div class="menu-toggle">
         <span class="span"></span>
@@ -336,30 +324,25 @@
     </div>
   </div>
 
-
-  <br><br><br><br><br><br><br><br>
   <center>
-    <h1>Melhores ofertas de Voos</h1>
+    <section class="card-section">
+      <div class="card">
+        <h2>Ofertas de Viagem</h2>
+        <p>Descubra as melhores ofertas de viagem personalizadas para você!</p>
+      </div>
+    </section>
   </center>
-  <br>
-  <section class="card-section" id="viagens">
-    <div class="flight-list"></div>
-  </section>
 
   <footer>
     <div class="footer-container">
       <div class="footer-left">
-        <h4>Rota Express</h4>
-        <p>Fácil, rápido e dinâmico.</p>
-        <p>&copy; 2024 Rota Express. Todos os direitos reservados.</p>
+        <p>Rota Express &copy; 2023 - Todos os direitos reservados.</p>
       </div>
       <div class="footer-right">
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#viagens">Viagens</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#informacoes">Informações</a></li>
-          <li><a href="search.html">Buscar Voos</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Twitter</a></li>
         </ul>
       </div>
     </div>
@@ -367,39 +350,37 @@
 
   <script>
     window.addEventListener("load", function () {
-      // Aguarda 5 segundos para remover o loader
-      setTimeout(function () {
-        document.body.classList.add("loaded");
-      }, 5000); // 5000 ms = 5 segundos
+      const loader = document.getElementById("loader");
+      setTimeout(() => {
+        loader.style.display = "none";
+      }, 2000);
     });
 
-    // Adicione este código ao seu script existente
-    $(document).ready(function () {
-      $('#searchSubmit').on('click', function () {
-        // Mostra o loader
-        $('#loader').show();
+    const menuToggle = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
 
-        // Simula uma espera de 3 segundos (3000 ms)
-        setTimeout(function () {
-          // Oculta o loader
-          $('#loader').hide();
-
-          // Aqui você pode adicionar a lógica de busca de voos
-          // Por exemplo, redirecionar para outra página ou fazer uma requisição AJAX
-        }, 3000); // 3000 ms = 3 segundos
-      });
+    menuToggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
     });
 
+    const searchButton = document.getElementById("searchButton");
+    const searchModal = document.getElementById("searchModal");
+    const closeButton = document.querySelector(".close-button");
+
+    searchButton.addEventListener("click", () => {
+      searchModal.style.display = "flex";
+    });
+
+    closeButton.addEventListener("click", () => {
+      searchModal.style.display = "none";
+    });
+
+    window.addEventListener("click", (event) => {
+      if (event.target === searchModal) {
+        searchModal.style.display = "none";
+      }
+    });
   </script>
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-  <script src="js/api/notices.js"></script>
-  <script src="js/display_card.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/search_modal.js"></script>
 </body>
 
 </html>
