--- a/src/home.html
+++ b/src/home.html
@@ -292,7 +292,7 @@
         <span></span>
       </div>
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="#viagens">Viagens</a></li>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#informacoes">Informações</a></li>
