--- a/src/search.html
+++ b/src/search.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <title>Star Search</title>
+    <link rel="stylesheet" href="/src/style/card.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <link rel="stylesheet" href="style/search.css" />
